# rospr

./: .gitignore  README.md  XBOX_CONTROLLER_IMPLEMENTATION.md  run_tests.py  test_integration.sh  test_spider_system.py
docs/: api_reference.md  hardware_setup.md  raspberry_pi_setup.md
install/: local_setup.sh  setup.sh
install/spider_behavior/lib/spider_behavior/: behavior_controller_node
install/spider_behavior/share/spider_behavior/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/spider_bringup/lib/spider_bringup/: demo_behaviors_node
install/spider_bringup/share/spider_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/spider_hardware/lib/spider_hardware/: servo_controller_node
log/: latest_build
reference/: instructions.md
src/spider_behavior/: setup.cfg  setup.py
src/spider_bringup/: package.xml  setup.cfg  setup.py
src/spider_bringup/launch/: spider_demo.launch.py  spider_robot.launch.py
src/spider_controller/: CMakeLists.txt  README.md  package.xml  setup.py
src/spider_controller/config/: controller_mapping.yaml
src/spider_controller/launch/: spider_controller.launch.py  spider_with_controller.launch.py
src/spider_controller/resource/: spider_controller
src/spider_controller/scripts/: manual_demo.py  test_controller.py  virtual_controller.py
src/spider_controller/spider_controller/: __init__.py  controller_node.py
src/spider_hardware/: MIGRATION_SUMMARY.md  README_PCA9685.md  SERVOKIT_BENEFITS.md  setup.cfg  setup.py
src/spider_hardware/config/: servo_config.yaml
src/spider_hardware/launch/: servo_controller.launch.py
src/spider_hardware/scripts/: diagnostics.py  setup_pca9685.sh  test_servos.py
src/spider_hardware/spider_hardware/: servo_controller_node.py
src/spider_kinematics/: setup.cfg  setup.py
src/spider_msgs/: CMakeLists.txt
src/spider_msgs/msg/: ServoPosition.msg
(+103 files in other folders)
