<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schemaversion="3.0"?>
<package format="3">
  <name>spider_controller</name>
  <version>0.0.0</version>
  <description>Xbox controller interface for spider robot</description>
  <maintainer email="loki@todo.todo">loki</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>spider_msgs</depend>
  <depend>joy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>